--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 /* Stylesheet */
 
-/* Import Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 body {  
   /* Horizontal and Vertical Center */
+  font-family: 'Zodiak-Regular';
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +18,6 @@ body {
 
 /* Apply Font */
 main {
-  font-family: 'Abril Fatface', cursive;
   font-size: 5vmin;
   text-align: center;
   
